log
Fri Apr  8 11:30:13 HSP 2022: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9b19e68
Fri Apr  8 11:43:45 HSP 2022: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|5
total_score: 10/70
a5fc932
Fri Apr  8 11:44:19 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
df23d92
Fri Apr  8 11:58:10 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8cd6b0b
Fri Apr  8 12:09:48 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
c5a4988
Sun Apr 10 12:50:59 HSP 2022: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:89:21: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         map->current=map->buckets[posicion];
                     ^
hashmap.c:103:25: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current=map->buckets[posicion];
                         ^
cc1.exe: all warnings being treated as errors
Compilation failed
2c9be5c
Sun Apr 10 12:52:41 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
58f858c
Sun Apr 10 12:57:12 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
d7ca9ed
Sun Apr 10 12:58:05 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|3
total_score: 40/70
4cc77c2
Sun Apr 10 13:11:08 HSP 2022: 
 hashmap.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:84:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
hashmap.c:79:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:97:20: error: 'return' with a value, in function returning void [-Werror]
             return NULL;
                    ^~~~
hashmap.c:79:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c: In function 'searchMap':
hashmap.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
96386f4
Sun Apr 10 13:39:48 HSP 2022: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:129:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
15e7348
Sun Apr 10 13:41:00 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
6a95ce4
